--- a/src/blocks/b-reviews/b-reviews.less
+++ b/src/blocks/b-reviews/b-reviews.less
@@ -15,7 +15,17 @@
 }
 
 .b-reviews__list {
-	margin-right: -20px;
+	width: 1020px;
+	margin: 0 auto;
+	padding-left: 10px;
+
+	@media (min-width: 1360px) {
+		width: 1360px;
+	}
+
+	@media (min-width: 1700px) {
+		width: 1700px;
+	}
 }
 
 .b-reviews__item {
