--- a/src/templates/contacts.jade
+++ b/src/templates/contacts.jade
@@ -28,7 +28,7 @@ block content
                     script(charset="utf-8", src="http://widgets.2gis.com/js/DGWidgetLoader.js")
                     script(charset="utf-8").
                         new DGWidgetLoader({
-                            "width": 1200,
+                            "width": "100%",
                             "height": 400,
                             "borderColor": "#a3a3a3",
                             "pos": {"lat": 55.129851325891494, "lon": 61.366946697235115, "zoom": 16},
