--- a/src/blocks/b-offers/b-offers.less
+++ b/src/blocks/b-offers/b-offers.less
@@ -10,15 +10,25 @@
 }
 
 .b-offers__list {
-	margin: 0 -44px 0 -24px;
+	width: 1020px;
+	margin: 0 auto;
+	padding-left: 10px;
+
+	@media (min-width: 1360px) {
+		width: 1360px;
+	}
+
+	@media (min-width: 1700px) {
+		width: 1700px;
+	}
 }
 
 .b-offers__item {
 	padding: 11px 20px 17px;
 	border: 4px solid transparent;
 	border-radius: 4px;
-	width: 336px;
-	margin-bottom: 28px;
+	width: 320px;
+	margin-bottom: 20px;
 	color: @text-color;
 
 	float: left;
