--- a/src/templates/blog.jade
+++ b/src/templates/blog.jade
@@ -28,48 +28,53 @@ block content
 
             p.b-page__lead Пишем о баннерах, рекламе, маркетинге, бизнесе, полезных сервисах, а&nbsp;также рассказываем немного о жизни студии.
 
-            .b-blog
-                .b-blog__list
-                    - for (var i=0; i<4;++i)
-                        a.b-blog__item(href='blog_item.html')
-                            p.b-blog__title Яндекс.Баян: пошаговое руководство по настройке рекламной кампании
+        .b-blog
+            .b-blog__list
+                - for (var i=0; i<4;++i)
+                    a.b-blog__item.emerge(href='blog_item.html', data-effect="relax", data-origin="top", data-expose="true")
+                        p.b-blog__title Яндекс.Баян: пошаговое руководство по настройке рекламной кампании
 
-                            .b-blog__content
-                                img.img-responsive.b-blog__image(src='assets/img/tmp/akcii.png')
-                            .b-blog__text
-                                p Один из самых доступных и популярных каналов входящего трафика, который конвертируется на целевых страницах и превращается в лиды или заявки.
-                            .row.text-muted
-                                .col-xs-6
-                                    span 16 марта 2015
-                                .col-xs-6.text-right
-                                    span 4 комментария
-                        a.b-blog__item(href='blog_item.html')
-                            p.b-blog__title Почему 9 из 10 слайдеров не работают и как это исправить?
+                        .b-blog__content
+                            img.img-responsive.b-blog__image(src='assets/img/tmp/akcii.png')
+                        .b-blog__text
+                            p Один из самых доступных и популярных каналов входящего трафика, который конвертируется на целевых страницах и превращается в лиды или заявки.
+                        .row.text-muted
+                            .col-xs-6
+                                span 16 марта 2015
+                            .col-xs-6.text-right
+                                span 4 комментария
+                    a.b-blog__item.emerge(href='blog_item.html', data-effect="relax", data-origin="top", data-expose="true")
+                        p.b-blog__title Почему 9 из 10 слайдеров не работают и как это исправить?
 
-                            .b-blog__content
-                                img.img-responsive.b-blog__image(src='assets/img/tmp/akcii.png')
-                            .b-blog__text
-                                p Оригинальный слайдер картинок. Слайдеры картинок удобно использовать в разделах фотогалерей, на сайтах интернет-магазинов для подробного описания.
-                            .row.text-muted
-                                .col-xs-6
-                                    span 15 августа 2013
-                                .col-xs-6.text-right
-                                    span 1 комментарий
-                        a.b-blog__item(href='blog_item.html')
-                            p.b-blog__title Flash или HTML5: сравнение по 10 критериям
+                        .b-blog__content
+                            img.img-responsive.b-blog__image(src='assets/img/tmp/akcii.png')
+                        .b-blog__text
+                            p Оригинальный слайдер картинок. Слайдеры картинок удобно использовать в разделах фотогалерей, на сайтах интернет-магазинов для подробного описания.
+                        .row.text-muted
+                            .col-xs-6
+                                span 15 августа 2013
+                            .col-xs-6.text-right
+                                span 1 комментарий
+                    a.b-blog__item.emerge(href='blog_item.html', data-effect="relax", data-origin="top", data-expose="true")
+                        p.b-blog__title Flash или HTML5: сравнение по 10 критериям
 
-                            .b-blog__content
-                                img.img-responsive.b-blog__image(src='assets/img/tmp/akcii.png')
-                            .b-blog__text
-                                p Начнем с того, что Flash технология переживает кризис уже не первый год. Наверное с 2000х годов время от времени поднимаются вопросы о том, какой Flash не актуальный.
-                            .row.text-muted
-                                .col-xs-6
-                                    span 16 марта 2015
-                                .col-xs-6.text-right
-                                    span 16 марта 2015
-            .g-loader
-                .g-loader__content
-                    a.g-loader__button(href='#') #[i.g-loader__button-icon]#[span.g-loader__button-text Загрузить ещё]
+                        .b-blog__content
+                            img.img-responsive.b-blog__image(src='assets/img/tmp/akcii.png')
+                        .b-blog__text
+                            p Начнем с того, что Flash технология переживает кризис уже не первый год. Наверное с 2000х годов время от времени поднимаются вопросы о том, какой Flash не актуальный.
+                        .row.text-muted
+                            .col-xs-6
+                                span 16 марта 2015
+                            .col-xs-6.text-right
+                                span 16 марта 2015
+            script.
+                $('.b-blog__item').each(function(){
+                    $(this).data('hold', Math.floor(Math.random() * 450) + 50);
+                });
+        .g-loader
+            .g-loader__content
+                a.g-loader__button(href='#') #[i.g-loader__button-icon]#[span.g-loader__button-text Загрузить ещё]
+        .container
             .b-subscribe
                 p.b-subscribe__title Получайте новые статьи прямо на почту
                 p.b-subscribe__lead Никакого спама или рекламы. Только статьи.
