--- a/src/templates/client.jade
+++ b/src/templates/client.jade
@@ -15,45 +15,39 @@ block content
                 .b-client__text
                     p На фармацевтическом рынке сеть аптек «Классика» существует с 1995 года. Это крупнейшая аптечная сеть на Урале, включающая более 180 аптек в 26 городах Челябинской и Свердловской областей. Аптеки находятся в Челябинске, Екатеринбурге, Тюмени и Магнитогорске. За эти 20 лет «Классика» прошла большой путь и приобрела имя, ставшее синонимом надежности и качества для людей по всему Уралу.
 
-            .b-portfolio
-                .b-portfolio__list
-                    - for (var i=0; i<12;++i)
-                        a.b-portfolio__item(href='#')
-                            img.b-portfolio__image(src='assets/img/tmp/pr-200x300-bosch-rotak.jpg')
-                            .b-portfolio__content
-                                span.b-portfolio__type.b-portfolio__type_html5 Html5-баннеры
-
-                                p.b-portfolio__title QIVI
-                                p.b-portfolio__category Строительство
-
-                                p.b-portfolio__date 20 апреля 2016
-                        a.b-portfolio__item(href='#')
-                            img.b-portfolio__image(src='assets/img/tmp/pr-200x300-electrovenik.jpg')
-                            .b-portfolio__content
-                                span.b-portfolio__type.b-portfolio__type_gif Gif-баннеры
-
-                                p.b-portfolio__title Длинное название работы
-                                p.b-portfolio__category Строительство
-
-                                p.b-portfolio__date 5 марта 2016
-                        a.b-portfolio__item(href='#')
-                            img.b-portfolio__image(src='assets/img/tmp/pr-200x300-mirta-n-0.jpg')
-                            .b-portfolio__content
-                                span.b-portfolio__type.b-portfolio__type_jpg Jpeg-баннеры
-
-                                p.b-portfolio__title QIVI
-                                p.b-portfolio__category Динное название категории
-
-                                p.b-portfolio__date 10 марта 2016
-                        a.b-portfolio__item(href='#')
-                            img.b-portfolio__image(src='assets/img/tmp/pr-200x600-adreals.jpg')
-                            .b-portfolio__content
-                                span.b-portfolio__type.b-portfolio__type_html5 Html5-баннеры
-                                p.b-portfolio__title QIVI
-                                p.b-portfolio__category Строительство
-                                p.b-portfolio__date 20 апреля 2016
-
-                .g-loader
-                    .g-loader__content
-                        a.g-loader__button(href='#') #[i.g-loader__button-icon]#[span.g-loader__button-text Загрузить ещё]
-
+        .b-portfolio.g-mb60
+            .b-portfolio__list
+                - for (var i=0; i<12;++i)
+                    a.b-portfolio__item.emerge(href='#portfolio_1', rel='portfolio', data-effect="zoom", data-origin="bottom", data-expose="true")
+                        img.b-portfolio__image(src='assets/img/tmp/portfolio1.png')
+                        .b-portfolio__content
+                            p.b-portfolio__title Самоедлинноеназваниефирмы
+                            p.b-portfolio__category Строительство
+                        span.b-portfolio__type.b-portfolio__type_html5 HTML5
+                        p.b-portfolio__date 10.02.2010
+                    a.b-portfolio__item.emerge(href='#portfolio_2', rel='portfolio', data-effect="zoom", data-origin="bottom", data-expose="true")
+                        img.b-portfolio__image(src='assets/img/tmp/portfolio2.png')
+                        .b-portfolio__content
+                            p.b-portfolio__title Длинное название фирмы
+                            p.b-portfolio__category Строительство
+                        span.b-portfolio__type.b-portfolio__type_gif GIF
+                        p.b-portfolio__date 10.02.2010
+                    a.b-portfolio__item.emerge(href='#portfolio_1', rel='portfolio', data-effect="zoom", data-origin="bottom", data-expose="true")
+                        img.b-portfolio__image(src='assets/img/tmp/portfolio3.png')
+                        .b-portfolio__content
+                            p.b-portfolio__title QIVI
+                            p.b-portfolio__category Динное название категории
+                        span.b-portfolio__type.b-portfolio__type_jpg JPG
+                        span.b-portfolio__like
+                        p.b-portfolio__date 10.02.2010
+                    a.b-portfolio__item.emerge(href='#portfolio_2', rel='portfolio', data-effect="zoom", data-origin="bottom", data-expose="true")
+                        img.b-portfolio__image(src='assets/img/tmp/portfolio2.png')
+                        .b-portfolio__content
+                            p.b-portfolio__title QIVI
+                            p.b-portfolio__category Строительство
+                        span.b-portfolio__type.b-portfolio__type_html5 HTML5
+                        p.b-portfolio__date 10.02.2010
+            script.
+                $('.b-portfolio__item').each(function(){
+                    $(this).data('hold', Math.floor(Math.random() * 400) + 50);
+                });
