--- a/src/templates/offers.jade
+++ b/src/templates/offers.jade
@@ -7,7 +7,8 @@ block content
 
             p.b-page__lead Бонусы от партнеров для наших клиентов
 
-            .b-offers
+        .b-offers
+            .container
                 .b-offers__filter.b-offers-filter
                     .b-offers-filter__block.b-offers-filter__block_color_yellow
                         a.b-offers-filter__item.b-offers-filter__item_active(href='#') Все
@@ -30,87 +31,99 @@ block content
                         a.b-offers-filter__item(href='#') Биг
 
                         .b-offers-filter__title jpg-баннеры
-                .b-offers__list
-                    a.b-offers__item(href='offer.html')
-                        p.b-offers__title 3 месяца бесплатного использования Jivosite
-                        .b-offers__content
-                            .b-offers__label Действует до 10.06.2016
-                            img.img-responsive.b-offers__image(src='assets/img/tmp/akcii.png')
-                        .b-offers__text
-                            p JivoSite позволяет Вам общаться в чате с посетителями Вашего сайта.
-                            p Это увеличивает эффективность сайта, повышая продажи без дополнительных вложений в рекламу.
-                    a.b-offers__item(href='offer.html')
-                        p.b-offers__title 3 месяца бесплатного использования Jivosite
-                        .b-offers__content
-                            .b-offers__label Действует до 10.06.2016
-                            img.img-responsive.b-offers__image(src='assets/img/tmp/akcii.png')
-                        .b-offers__text
-                            p JivoSite позволяет Вам общаться в чате с посетителями Вашего сайта.
-                            p Это увеличивает эффективность сайта, повышая продажи без дополнительных вложений в рекламу.
-                    a.b-offers__item(href='offer.html')
-                        p.b-offers__title 3 месяца бесплатного использования Jivosite
-                        .b-offers__content
-                            .b-offers__label Действует до 10.06.2016
-                            img.img-responsive.b-offers__image(src='assets/img/tmp/akcii.png')
-                        .b-offers__text
-                            p JivoSite позволяет Вам общаться в чате с посетителями Вашего сайта.
-                            p Это увеличивает эффективность сайта, повышая продажи без дополнительных вложений в рекламу.
-                    a.b-offers__item(href='offer.html')
-                        p.b-offers__title 3 месяца бесплатного использования Jivosite
-                        .b-offers__content
-                            .b-offers__label Действует до 10.06.2016
-                            img.img-responsive.b-offers__image(src='assets/img/tmp/akcii.png')
-                        .b-offers__text
-                            p JivoSite позволяет Вам общаться в чате с посетителями Вашего сайта.
-                            p Это увеличивает эффективность сайта, повышая продажи без дополнительных вложений в рекламу.
-                    a.b-offers__item(href='offer.html')
-                        p.b-offers__title 3 месяца бесплатного использования Jivosite
-                        .b-offers__content
-                            .b-offers__label Действует до 10.06.2016
-                            img.img-responsive.b-offers__image(src='assets/img/tmp/akcii.png')
-                        .b-offers__text
-                            p JivoSite позволяет Вам общаться в чате с посетителями Вашего сайта.
-                            p Это увеличивает эффективность сайта, повышая продажи без дополнительных вложений в рекламу.
-                    a.b-offers__item(href='offer.html')
-                        p.b-offers__title 3 месяца бесплатного использования Jivosite
-                        .b-offers__content
-                            .b-offers__label Действует до 10.06.2016
-                            img.img-responsive.b-offers__image(src='assets/img/tmp/akcii.png')
-                        .b-offers__text
-                            p JivoSite позволяет Вам общаться в чате с посетителями Вашего сайта.
-                            p Это увеличивает эффективность сайта, повышая продажи без дополнительных вложений в рекламу.
-                    a.b-offers__item(href='offer.html')
-                        p.b-offers__title 3 месяца бесплатного использования Jivosite
-                        .b-offers__content
-                            .b-offers__label Действует до 10.06.2016
-                            img.img-responsive.b-offers__image(src='assets/img/tmp/akcii.png')
-                        .b-offers__text
-                            p JivoSite позволяет Вам общаться в чате с посетителями Вашего сайта.
-                            p Это увеличивает эффективность сайта, повышая продажи без дополнительных вложений в рекламу.
-                    a.b-offers__item(href='offer.html')
-                        p.b-offers__title 3 месяца бесплатного использования Jivosite
-                        .b-offers__content
-                            .b-offers__label Действует до 10.06.2016
-                            img.img-responsive.b-offers__image(src='assets/img/tmp/akcii.png')
-                        .b-offers__text
-                            p JivoSite позволяет Вам общаться в чате с посетителями Вашего сайта.
-                            p Это увеличивает эффективность сайта, повышая продажи без дополнительных вложений в рекламу.
-                    a.b-offers__item(href='offer.html')
-                        p.b-offers__title 3 месяца бесплатного использования Jivosite
-                        .b-offers__content
-                            .b-offers__label Действует до 10.06.2016
-                            img.img-responsive.b-offers__image(src='assets/img/tmp/akcii.png')
-                        .b-offers__text
-                            p JivoSite позволяет Вам общаться в чате с посетителями Вашего сайта.
-                            p Это увеличивает эффективность сайта, повышая продажи без дополнительных вложений в рекламу.
-                .g-loader
-                    .g-loader__content
-                        a.g-loader__button(href='#') #[i.g-loader__button-icon]#[span.g-loader__button-text Загрузить ещё]
-            .b-subscribe.b-subscribe_theme_alt
-                p.b-subscribe__title Получайте новые акции прямо на почту
-                p.b-subscribe__lead Никакого спама или рекламы. Только акции.
+            .b-offers__list
+                a.b-offers__item.emerge(href='offer.html', data-effect="relax", data-origin="top", data-expose="true")
+                    p.b-offers__title 3 месяца бесплатного использования Jivosite
+                    .b-offers__content
+                        .b-offers__label Действует до 10.06.2016
+                        img.img-responsive.b-offers__image(src='assets/img/tmp/akcii.png')
+                    .b-offers__text
+                        p JivoSite позволяет Вам общаться в чате с посетителями Вашего сайта.
+                        p Это увеличивает эффективность сайта, повышая продажи без дополнительных вложений в рекламу.
+                a.b-offers__item.emerge(href='offer.html', data-effect="relax", data-origin="top", data-expose="true")
+                    p.b-offers__title 3 месяца бесплатного использования Jivosite
+                    .b-offers__content
+                        .b-offers__label Действует до 10.06.2016
+                        img.img-responsive.b-offers__image(src='assets/img/tmp/akcii.png')
+                    .b-offers__text
+                        p JivoSite позволяет Вам общаться в чате с посетителями Вашего сайта.
+                        p Это увеличивает эффективность сайта, повышая продажи без дополнительных вложений в рекламу.
+                a.b-offers__item.emerge(href='offer.html', data-effect="relax", data-origin="top", data-expose="true")
+                    p.b-offers__title 3 месяца бесплатного использования Jivosite
+                    .b-offers__content
+                        .b-offers__label Действует до 10.06.2016
+                        img.img-responsive.b-offers__image(src='assets/img/tmp/akcii.png')
+                    .b-offers__text
+                        p JivoSite позволяет Вам общаться в чате с посетителями Вашего сайта.
+                        p Это увеличивает эффективность сайта, повышая продажи без дополнительных вложений в рекламу.
+                a.b-offers__item.emerge(href='offer.html', data-effect="relax", data-origin="top", data-expose="true")
+                    p.b-offers__title 3 месяца бесплатного использования Jivosite
+                    .b-offers__content
+                        .b-offers__label Действует до 10.06.2016
+                        img.img-responsive.b-offers__image(src='assets/img/tmp/akcii.png')
+                    .b-offers__text
+                        p JivoSite позволяет Вам общаться в чате с посетителями Вашего сайта.
+                        p Это увеличивает эффективность сайта, повышая продажи без дополнительных вложений в рекламу.
+                a.b-offers__item.emerge(href='offer.html', data-effect="relax", data-origin="top", data-expose="true")
+                    p.b-offers__title 3 месяца бесплатного использования Jivosite
+                    .b-offers__content
+                        .b-offers__label Действует до 10.06.2016
+                        img.img-responsive.b-offers__image(src='assets/img/tmp/akcii.png')
+                    .b-offers__text
+                        p JivoSite позволяет Вам общаться в чате с посетителями Вашего сайта.
+                        p Это увеличивает эффективность сайта, повышая продажи без дополнительных вложений в рекламу.
+                a.b-offers__item.emerge(href='offer.html', data-effect="relax", data-origin="top", data-expose="true")
+                    p.b-offers__title 3 месяца бесплатного использования Jivosite
+                    .b-offers__content
+                        .b-offers__label Действует до 10.06.2016
+                        img.img-responsive.b-offers__image(src='assets/img/tmp/akcii.png')
+                    .b-offers__text
+                        p JivoSite позволяет Вам общаться в чате с посетителями Вашего сайта.
+                        p Это увеличивает эффективность сайта, повышая продажи без дополнительных вложений в рекламу.
+                a.b-offers__item.emerge(href='offer.html', data-effect="relax", data-origin="top", data-expose="true")
+                    p.b-offers__title 3 месяца бесплатного использования Jivosite
+                    .b-offers__content
+                        .b-offers__label Действует до 10.06.2016
+                        img.img-responsive.b-offers__image(src='assets/img/tmp/akcii.png')
+                    .b-offers__text
+                        p JivoSite позволяет Вам общаться в чате с посетителями Вашего сайта.
+                        p Это увеличивает эффективность сайта, повышая продажи без дополнительных вложений в рекламу.
+                a.b-offers__item.emerge(href='offer.html', data-effect="relax", data-origin="top", data-expose="true")
+                    p.b-offers__title 3 месяца бесплатного использования Jivosite
+                    .b-offers__content
+                        .b-offers__label Действует до 10.06.2016
+                        img.img-responsive.b-offers__image(src='assets/img/tmp/akcii.png')
+                    .b-offers__text
+                        p JivoSite позволяет Вам общаться в чате с посетителями Вашего сайта.
+                        p Это увеличивает эффективность сайта, повышая продажи без дополнительных вложений в рекламу.
+                a.b-offers__item.emerge(href='offer.html', data-effect="relax", data-origin="top", data-expose="true")
+                    p.b-offers__title 3 месяца бесплатного использования Jivosite
+                    .b-offers__content
+                        .b-offers__label Действует до 10.06.2016
+                        img.img-responsive.b-offers__image(src='assets/img/tmp/akcii.png')
+                    .b-offers__text
+                        p JivoSite позволяет Вам общаться в чате с посетителями Вашего сайта.
+                        p Это увеличивает эффективность сайта, повышая продажи без дополнительных вложений в рекламу.
+                a.b-offers__item.emerge(href='offer.html', data-effect="relax", data-origin="top", data-expose="true")
+                    p.b-offers__title 3 месяца бесплатного использования Jivosite
+                    .b-offers__content
+                        .b-offers__label Действует до 10.06.2016
+                        img.img-responsive.b-offers__image(src='assets/img/tmp/akcii.png')
+                    .b-offers__text
+                        p JivoSite позволяет Вам общаться в чате с посетителями Вашего сайта.
+                        p Это увеличивает эффективность сайта, повышая продажи без дополнительных вложений в рекламу.
+            script.
+                $('.b-offers__item').each(function(){
+                    $(this).data('hold', Math.floor(Math.random() * 450) + 50);
+                });
+        .g-loader
+            .g-loader__content
+                a.g-loader__button(href='#') #[i.g-loader__button-icon]#[span.g-loader__button-text Загрузить ещё]
+        .b-subscribe.b-subscribe_theme_alt
+            p.b-subscribe__title Получайте новые акции прямо на почту
+            p.b-subscribe__lead Никакого спама или рекламы. Только акции.
 
-                form.form-inline.b-subscribe__form
-                    .form-group
-                        input.form-control.b-subscribe__input(name='email', type='email', placeholder='Введите свой email')
-                    button.btn.btn-lg.btn-success.b-subscribe__button(type="submit") Подписаться
+            form.form-inline.b-subscribe__form
+                .form-group
+                    input.form-control.b-subscribe__input(name='email', type='email', placeholder='Введите свой email')
+                button.btn.btn-lg.btn-success.b-subscribe__button(type="submit") Подписаться
