--- a/src/templates/reviews.jade
+++ b/src/templates/reviews.jade
@@ -27,107 +27,110 @@ block content
                         span.b-reviews-filter__count 422
 
         .b-reviews__container
-            .container
-                .b-reviews__list
-                    .b-reviews__item.b-reviews__item_type_video
-                        .b-reviews__header
-                            a.b-reviews__type(href='#') Видеоотзывы
-                        .text-center: a.b-reviews__title(href='#') 1ДСКиКО
-                        .b-reviews__content
-                            .b-review.b-review_video
-                                a.b-review__link(href='http://www.youtube.com/watch?v=opj24KnzrWo'): img.img-responsive(src='http://placehold.it/320x180')
-                        .b-reviews__footer
-                            span.b-reviews__date 22 июня 2016
-                            a.b-reviews__link(href='#') Оригинал отзыва
-                    .b-reviews__item.b-reviews__item_type_mail
-                        .b-reviews__header
-                            a.b-reviews__type(href='#') Рекомендательные письма
-                        .text-center: a.b-reviews__title(href='#') Газелькин
-                        .b-reviews__content.b-reviews__content_type_image
-                            .b-review.b-review_image
-                                a.b-review__link(href='#review_1'): img.img-responsive(src='http://placehold.it/196x264')
-                        .b-reviews__footer
-                            span.b-reviews__date 5 февраля 2015
-                            a.b-reviews__link(href='#') Оригинал отзыва
-                    .b-reviews__item.b-reviews__item_type_social
-                        .b-reviews__header
-                            a.b-reviews__type(href='#') Социальные сети
-                            .b-reviews__icon: .b-reviews__social-icon.b-reviews__social-icon_fb
-                        .text-center: a.b-reviews__title(href='#') Exante
-                        .b-reviews__content.b-reviews__content_type_text
-                            p Являюсь постоянным клиентом вот уже несколько лет. По моему заказу сделано уже больше двух десятков различных баннеров, шапок для сайтов, фонов, кнопок и т.д. Легко находим общий язык и видение по очередному заказу. Всегда идет на встречу по любым доработкам и изменениям. Качество на высоте. Очень доволен сотрудничеством, всем рекомендую.
-                        .b-reviews__footer
-                            span.b-reviews__date 11 января 2015
-                            a.b-reviews__link(href='#') Оригинал отзыва
-                    .b-reviews__item.b-reviews__item_type_social
-                        .b-reviews__header
-                            a.b-reviews__type(href='#') Социальные сети
-                            .b-reviews__icon: .b-reviews__social-icon.b-reviews__social-icon_vk
-                        .text-center: a.b-reviews__title(href='#') Exante
-                        .b-reviews__content.b-reviews__content_type_text
-                            p Являюсь постоянным клиентом вот уже несколько лет. По моему заказу сделано уже больше двух десятков различных баннеров, шапок для сайтов, фонов, кнопок и т.д. Легко находим общий язык и видение по очередному заказу. Всегда идет на встречу по любым доработкам и изменениям. Качество на высоте. Очень доволен сотрудничеством, всем рекомендую.
-                        .b-reviews__footer
-                            span.b-reviews__date 11 января 2015
-                            a.b-reviews__link(href='#') Оригинал отзыва
-                    .b-reviews__item.b-reviews__item_type_social
-                        .b-reviews__header
-                            a.b-reviews__type(href='#') Социальные сети
-                            .b-reviews__icon: .b-reviews__social-icon.b-reviews__social-icon_tw
-                        .text-center: a.b-reviews__title(href='#') Exante
-                        .b-reviews__content.b-reviews__content_type_text
-                            p Являюсь постоянным клиентом вот уже несколько лет. По моему заказу сделано уже больше двух десятков различных баннеров, шапок для сайтов, фонов, кнопок и т.д. Легко находим общий язык и видение по очередному заказу. Всегда идет на встречу по любым доработкам и изменениям. Качество на высоте. Очень доволен сотрудничеством, всем рекомендую.
-                        .b-reviews__footer
-                            span.b-reviews__date 11 января 2015
-                            a.b-reviews__link(href='#') Оригинал отзыва
-                    .b-reviews__item.b-reviews__item_type_social
-                        .b-reviews__header
-                            a.b-reviews__type(href='#') Социальные сети
-                            .b-reviews__icon: .b-reviews__social-icon.b-reviews__social-icon_instagram
-                        .text-center: a.b-reviews__title(href='#') Exante
-                        .b-reviews__content.b-reviews__content_type_text
-                            p Являюсь постоянным клиентом вот уже несколько лет. По моему заказу сделано уже больше двух десятков различных баннеров, шапок для сайтов, фонов, кнопок и т.д. Легко находим общий язык и видение по очередному заказу. Всегда идет на встречу по любым доработкам и изменениям. Качество на высоте. Очень доволен сотрудничеством, всем рекомендую.
-                        .b-reviews__footer
-                            span.b-reviews__date 11 января 2015
-                            a.b-reviews__link(href='#') Оригинал отзыва
-                    .b-reviews__item.b-reviews__item_type_social
-                        .b-reviews__header
-                            a.b-reviews__type(href='#') Социальные сети
-                            .b-reviews__icon: .b-reviews__social-icon.b-reviews__social-icon_ok
-                        .text-center: a.b-reviews__title(href='#') Exante
-                        .b-reviews__content.b-reviews__content_type_text
-                            p Являюсь постоянным клиентом вот уже несколько лет. По моему заказу сделано уже больше двух десятков различных баннеров, шапок для сайтов, фонов, кнопок и т.д. Легко находим общий язык и видение по очередному заказу. Всегда идет на встречу по любым доработкам и изменениям. Качество на высоте. Очень доволен сотрудничеством, всем рекомендую.
-                        .b-reviews__footer
-                            span.b-reviews__date 11 января 2015
-                            a.b-reviews__link(href='#') Оригинал отзыва
-                    .b-reviews__item.b-reviews__item_type_fl
-                        .b-reviews__header
-                            a.b-reviews__type(href='#') Fl.ru
-                        .text-center: a.b-reviews__title(href='#') Exante
-                        .b-reviews__content.b-reviews__content_type_text
-                            p Задание было выполнено! Качество радует! Рекомендую!
-                        .b-reviews__footer
-                            span.b-reviews__date 11 января 2015
-                            a.b-reviews__link(href='#') Оригинал отзыва
-                    .b-reviews__item.b-reviews__item_type_forums
-                        .b-reviews__header
-                            a.b-reviews__type(href='#') Форумы
-                            .b-reviews__icon: .b-reviews__forum-icon.b-reviews__forum-icon_prcy
-                        .text-center: a.b-reviews__title(href='#') Exante
-                        .b-reviews__content.b-reviews__content_type_text
-                            p Регулярно заказываем баннеры. Цены, качество, сроки - все отлично :)
-                        .b-reviews__footer
-                            span.b-reviews__date 11 января 2015
-                            a.b-reviews__link(href='#') Оригинал отзыва
-                    .b-reviews__item.b-reviews__item_type_forums
-                        .b-reviews__header
-                            a.b-reviews__type(href='#') Форумы
-                            .b-reviews__icon: .b-reviews__forum-icon.b-reviews__forum-icon_cypr
-                        .text-center: a.b-reviews__title(href='#') Exante
-                        .b-reviews__content.b-reviews__content_type_text
-                            p Регулярно заказываем баннеры. Цены, качество, сроки - все отлично :)
-                        .b-reviews__footer
-                            span.b-reviews__date 11 января 2015
-                            a.b-reviews__link(href='#') Оригинал отзыва
+            .b-reviews__list
+                .b-reviews__item.emerge.b-reviews__item_type_video(data-effect="relax", data-origin="top", data-expose="true")
+                    .b-reviews__header
+                        a.b-reviews__type(href='#') Видеоотзывы
+                    .text-center: a.b-reviews__title(href='#') 1ДСКиКО
+                    .b-reviews__content
+                        .b-review.b-review_video
+                            a.b-review__link(href='http://www.youtube.com/watch?v=opj24KnzrWo'): img.img-responsive(src='http://placehold.it/320x180')
+                    .b-reviews__footer
+                        span.b-reviews__date 22 июня 2016
+                        a.b-reviews__link(href='#') Оригинал отзыва
+                .b-reviews__item.emerge.b-reviews__item_type_mail(data-effect="relax", data-origin="top", data-expose="true")
+                    .b-reviews__header
+                        a.b-reviews__type(href='#') Рекомендательные письма
+                    .text-center: a.b-reviews__title(href='#') Газелькин
+                    .b-reviews__content.b-reviews__content_type_image
+                        .b-review.b-review_image
+                            a.b-review__link(href='#review_1'): img.img-responsive(src='http://placehold.it/196x264')
+                    .b-reviews__footer
+                        span.b-reviews__date 5 февраля 2015
+                        a.b-reviews__link(href='#') Оригинал отзыва
+                .b-reviews__item.emerge.b-reviews__item_type_social(data-effect="relax", data-origin="top", data-expose="true")
+                    .b-reviews__header
+                        a.b-reviews__type(href='#') Социальные сети
+                        .b-reviews__icon: .b-reviews__social-icon.b-reviews__social-icon_fb
+                    .text-center: a.b-reviews__title(href='#') Exante
+                    .b-reviews__content.b-reviews__content_type_text
+                        p Являюсь постоянным клиентом вот уже несколько лет. По моему заказу сделано уже больше двух десятков различных баннеров, шапок для сайтов, фонов, кнопок и т.д. Легко находим общий язык и видение по очередному заказу. Всегда идет на встречу по любым доработкам и изменениям. Качество на высоте. Очень доволен сотрудничеством, всем рекомендую.
+                    .b-reviews__footer
+                        span.b-reviews__date 11 января 2015
+                        a.b-reviews__link(href='#') Оригинал отзыва
+                .b-reviews__item.emerge.b-reviews__item_type_social(data-effect="relax", data-origin="top", data-expose="true")
+                    .b-reviews__header
+                        a.b-reviews__type(href='#') Социальные сети
+                        .b-reviews__icon: .b-reviews__social-icon.b-reviews__social-icon_vk
+                    .text-center: a.b-reviews__title(href='#') Exante
+                    .b-reviews__content.b-reviews__content_type_text
+                        p Являюсь постоянным клиентом вот уже несколько лет. По моему заказу сделано уже больше двух десятков различных баннеров, шапок для сайтов, фонов, кнопок и т.д. Легко находим общий язык и видение по очередному заказу. Всегда идет на встречу по любым доработкам и изменениям. Качество на высоте. Очень доволен сотрудничеством, всем рекомендую.
+                    .b-reviews__footer
+                        span.b-reviews__date 11 января 2015
+                        a.b-reviews__link(href='#') Оригинал отзыва
+                .b-reviews__item.emerge.b-reviews__item_type_social(data-effect="relax", data-origin="top", data-expose="true")
+                    .b-reviews__header
+                        a.b-reviews__type(href='#') Социальные сети
+                        .b-reviews__icon: .b-reviews__social-icon.b-reviews__social-icon_tw
+                    .text-center: a.b-reviews__title(href='#') Exante
+                    .b-reviews__content.b-reviews__content_type_text
+                        p Являюсь постоянным клиентом вот уже несколько лет. По моему заказу сделано уже больше двух десятков различных баннеров, шапок для сайтов, фонов, кнопок и т.д. Легко находим общий язык и видение по очередному заказу. Всегда идет на встречу по любым доработкам и изменениям. Качество на высоте. Очень доволен сотрудничеством, всем рекомендую.
+                    .b-reviews__footer
+                        span.b-reviews__date 11 января 2015
+                        a.b-reviews__link(href='#') Оригинал отзыва
+                .b-reviews__item.emerge.b-reviews__item_type_social(data-effect="relax", data-origin="top", data-expose="true")
+                    .b-reviews__header
+                        a.b-reviews__type(href='#') Социальные сети
+                        .b-reviews__icon: .b-reviews__social-icon.b-reviews__social-icon_instagram
+                    .text-center: a.b-reviews__title(href='#') Exante
+                    .b-reviews__content.b-reviews__content_type_text
+                        p Являюсь постоянным клиентом вот уже несколько лет. По моему заказу сделано уже больше двух десятков различных баннеров, шапок для сайтов, фонов, кнопок и т.д. Легко находим общий язык и видение по очередному заказу. Всегда идет на встречу по любым доработкам и изменениям. Качество на высоте. Очень доволен сотрудничеством, всем рекомендую.
+                    .b-reviews__footer
+                        span.b-reviews__date 11 января 2015
+                        a.b-reviews__link(href='#') Оригинал отзыва
+                .b-reviews__item.emerge.b-reviews__item_type_social(data-effect="relax", data-origin="top", data-expose="true")
+                    .b-reviews__header
+                        a.b-reviews__type(href='#') Социальные сети
+                        .b-reviews__icon: .b-reviews__social-icon.b-reviews__social-icon_ok
+                    .text-center: a.b-reviews__title(href='#') Exante
+                    .b-reviews__content.b-reviews__content_type_text
+                        p Являюсь постоянным клиентом вот уже несколько лет. По моему заказу сделано уже больше двух десятков различных баннеров, шапок для сайтов, фонов, кнопок и т.д. Легко находим общий язык и видение по очередному заказу. Всегда идет на встречу по любым доработкам и изменениям. Качество на высоте. Очень доволен сотрудничеством, всем рекомендую.
+                    .b-reviews__footer
+                        span.b-reviews__date 11 января 2015
+                        a.b-reviews__link(href='#') Оригинал отзыва
+                .b-reviews__item.emerge.b-reviews__item_type_fl(data-effect="relax", data-origin="top", data-expose="true")
+                    .b-reviews__header
+                        a.b-reviews__type(href='#') Fl.ru
+                    .text-center: a.b-reviews__title(href='#') Exante
+                    .b-reviews__content.b-reviews__content_type_text
+                        p Задание было выполнено! Качество радует! Рекомендую!
+                    .b-reviews__footer
+                        span.b-reviews__date 11 января 2015
+                        a.b-reviews__link(href='#') Оригинал отзыва
+                .b-reviews__item.emerge.b-reviews__item_type_forums(data-effect="relax", data-origin="top", data-expose="true")
+                    .b-reviews__header
+                        a.b-reviews__type(href='#') Форумы
+                        .b-reviews__icon: .b-reviews__forum-icon.b-reviews__forum-icon_prcy
+                    .text-center: a.b-reviews__title(href='#') Exante
+                    .b-reviews__content.b-reviews__content_type_text
+                        p Регулярно заказываем баннеры. Цены, качество, сроки - все отлично :)
+                    .b-reviews__footer
+                        span.b-reviews__date 11 января 2015
+                        a.b-reviews__link(href='#') Оригинал отзыва
+                .b-reviews__item.emerge.b-reviews__item_type_forums(data-effect="relax", data-origin="top", data-expose="true")
+                    .b-reviews__header
+                        a.b-reviews__type(href='#') Форумы
+                        .b-reviews__icon: .b-reviews__forum-icon.b-reviews__forum-icon_cypr
+                    .text-center: a.b-reviews__title(href='#') Exante
+                    .b-reviews__content.b-reviews__content_type_text
+                        p Регулярно заказываем баннеры. Цены, качество, сроки - все отлично :)
+                    .b-reviews__footer
+                        span.b-reviews__date 11 января 2015
+                        a.b-reviews__link(href='#') Оригинал отзыва
+            script.
+                $('.b-reviews__item').each(function(){
+                    $(this).data('hold', Math.floor(Math.random() * 450) + 50);
+                });
             .g-loader
                 .g-loader__content
                     a.g-loader__button(href='#') #[i.g-loader__button-icon]#[span.g-loader__button-text Загрузить ещё]
