--- a/src/blocks/b-offer-variants/b-offer-variants.less
+++ b/src/blocks/b-offer-variants/b-offer-variants.less
@@ -3,8 +3,8 @@
 
 .b-offer-variants {
 	text-align: center;
-	margin-top: 60px;
-	margin-bottom: 100px;
+	margin-top: 50px;
+	margin-bottom: 90px;
 }
 
 .b-offer-variants__header {
@@ -22,7 +22,7 @@
 .b-offer-variants__item {
 	float: left;
 	background: #f5f9fc;
-	margin: 0 10px;
+	margin: 10px;
 	width: 300px;
 	border-radius: 5px;
 	padding: 15px 14px;
@@ -46,19 +46,25 @@
 	font-size: 75%;
 }
 
-.b-offer-variants__item_1 {
+.b-offer-variants__item_color_green {
+	.b-offer-variants__title {
+		color: #2ecc71;
+	}
+}
+
+.b-offer-variants__item_color_red {
 	.b-offer-variants__title {
 		color: #e74c3c;
 	}
 }
 
-.b-offer-variants__item_2 {
+.b-offer-variants__item_color_blue {
 	.b-offer-variants__title {
 		color: #008fcb;
 	}
 }
 
-.b-offer-variants__item_3 {
+.b-offer-variants__item_color_purple {
 	.b-offer-variants__title {
 		color: #9c1cae;
 	}
