--- a/src/blocks/b-page/b-page.less
+++ b/src/blocks/b-page/b-page.less
@@ -12,6 +12,7 @@
 	text-align: center;
 	font-weight: bold;
 	font-size: 40px;
+	line-height: 1.275;
 }
 
 .b-page__lead {
@@ -42,4 +43,23 @@
 
 .b-page__anchor {
 
+}
+
+.b-page__back {
+	display: inline-block;
+	background: #f5f9fc;
+	padding: 10px 16px;
+	font-size: 12px;
+	font-weight: bold;
+	color: #868686;
+	text-transform: uppercase;
+	letter-spacing: 0.1em;
+	margin-bottom: 20px;
+	border-radius: 4px;
+
+	&:hover, &:active, &:focus {
+		color: #fff;
+		text-decoration: none;
+		background: #008fcb;
+	}
 }
