--- a/src/blocks/b-splash-sizes/b-splash-sizes.less
+++ b/src/blocks/b-splash-sizes/b-splash-sizes.less
@@ -2,6 +2,7 @@
 @import "mixins";
 
 .b-splash-sizes {
+	.clearfix();
 }
 
 .b-splash-sizes__item {
@@ -14,6 +15,7 @@
 	margin: 0 6px 6px 0;
 	width: 73px + 4px;
 	text-align: center;
+	float: left;
 
 	&:hover, &:active, &:focus {
 		text-decoration: none;
