--- a/src/blocks/b-subscribe/b-subscribe.less
+++ b/src/blocks/b-subscribe/b-subscribe.less
@@ -24,7 +24,7 @@
 .b-subscribe__input {
 	background: #f4f4f4;
 	color: @text-color;
-	box-shadow: none;
+	box-shadow: none !important;
 	border: none;
 	font-size: 24px;
 	padding: 13px 12px;
@@ -43,6 +43,7 @@
 	padding-left: 22px;
 	padding-right: 22px;
 	margin-left: 15px;
+	vertical-align: top;
 }
 
 .b-subscribe_theme_alt {
