--- a/src/templates/blog_item.jade
+++ b/src/templates/blog_item.jade
@@ -45,6 +45,18 @@ block content
                     .text-center
                         img(src='http://placehold.it/530x410')
                     p С 13 по 16 апреля сайт ни разу не занимал одинаковую позицию. 15 апреля в топ вошли сайты #[a(href='#') zarplatawmz.ru] и dolinacoda.ru. Первый 16 апреля из топа исчез, а второй там удержался. 16 апреля «Яндекс» показывал в выдаче по выбранному запросу блок с видео.
+                    .b-gallery
+                        a.b-gallery__item(href='http://farm6.staticflickr.com/5444/17679973232_568353a624_b.jpg', rel='gallery_1', title=''): img.b-gallery__image(src='http://farm6.staticflickr.com/5444/17679973232_568353a624_m.jpg', alt='')
+                        a.b-gallery__item(href='http://farm8.staticflickr.com/7367/16426879675_e32ac817a8_b.jpg', rel='gallery_1', title='Codirosso spazzacamino (Massimo Greco _Foligno)'): img.b-gallery__image(src='http://farm8.staticflickr.com/7367/16426879675_e32ac817a8_m.jpg', alt='')
+                        a.b-gallery__item(href='http://farm8.staticflickr.com/7367/16426879675_e32ac817a8_b.jpg', rel='gallery_1', title='Codirosso spazzacamino (Massimo Greco _Foligno)'): img.b-gallery__image(src='http://farm8.staticflickr.com/7367/16426879675_e32ac817a8_m.jpg', alt='')
+                        a.b-gallery__item(href='http://farm8.staticflickr.com/7367/16426879675_e32ac817a8_b.jpg', rel='gallery_1', title='Codirosso spazzacamino (Massimo Greco _Foligno)'): img.b-gallery__image(src='http://farm8.staticflickr.com/7367/16426879675_e32ac817a8_m.jpg', alt='')
+                        a.b-gallery__item(href='http://farm8.staticflickr.com/7367/16426879675_e32ac817a8_b.jpg', rel='gallery_1', title='Codirosso spazzacamino (Massimo Greco _Foligno)'): img.b-gallery__image(src='http://farm8.staticflickr.com/7367/16426879675_e32ac817a8_m.jpg', alt='')
+                    .b-gallery
+                        a.b-gallery__item(href='http://farm6.staticflickr.com/5444/17679973232_568353a624_b.jpg', rel='gallery_2', title='Gallery 2'): img.b-gallery__image(src='http://farm6.staticflickr.com/5444/17679973232_568353a624_m.jpg', alt='')
+                        a.b-gallery__item(href='http://farm8.staticflickr.com/7367/16426879675_e32ac817a8_b.jpg', rel='gallery_2', title='Gallery 2 (Massimo Greco _Foligno)'): img.b-gallery__image(src='http://farm8.staticflickr.com/7367/16426879675_e32ac817a8_m.jpg', alt='')
+                        a.b-gallery__item(href='http://farm8.staticflickr.com/7367/16426879675_e32ac817a8_b.jpg', rel='gallery_2', title='Codirosso spazzacamino (Massimo Greco _Foligno)'): img.b-gallery__image(src='http://farm8.staticflickr.com/7367/16426879675_e32ac817a8_m.jpg', alt='')
+                        a.b-gallery__item(href='http://farm8.staticflickr.com/7367/16426879675_e32ac817a8_b.jpg', rel='gallery_2', title='Codirosso spazzacamino (Massimo Greco _Foligno)'): img.b-gallery__image(src='http://farm8.staticflickr.com/7367/16426879675_e32ac817a8_m.jpg', alt='')
+                        a.b-gallery__item(href='http://farm8.staticflickr.com/7367/16426879675_e32ac817a8_b.jpg', rel='gallery_2', title='Codirosso spazzacamino (Massimo Greco _Foligno)'): img.b-gallery__image(src='http://farm8.staticflickr.com/7367/16426879675_e32ac817a8_m.jpg', alt='')
                     p Какие выводы можно сделать? Выдача «Яндекса» постоянно меняется как по коммерческим, так и по информационным запросам. Изменения происходят очень быстро. Сайты появляются и исчезают из топа. Также они постоянно меняют позиции на первой странице выдачи. Можно ли объяснить лабильность SERP многоруким бандитом? Да, хотя на изменения выдачи влияют и другие факторы, например, персонализация.
 
                     blockquote
