--- a/src/templates/clients.jade
+++ b/src/templates/clients.jade
@@ -8,7 +8,7 @@ block content
         .b-clients
             .container
                 .b-clients__list
-                    - for (var i=0; i<4;++i)
+                    - for (var i=0; i<3;++i)
                         a.b-clients__item(href='client.html')
                             span.b-clients__title Классика
                             .b-clients__content
@@ -26,6 +26,21 @@ block content
                                 img.b-clients__image_hover(src='assets/img/empty-logo.png')
                         a.b-clients__item(href='client.html')
                             span.b-clients__title MAXPROMO
+                            .b-clients__content
+                                img.b-clients__image_default(src='assets/img/tmp/client_2_off.png')
+                                img.b-clients__image_hover(src='assets/img/tmp/client_2_on.png')
+                        a.b-clients__item(href='client.html')
+                            span.b-clients__title Московская консерватория
+                            .b-clients__content
+                                img.b-clients__image_default(src='assets/img/tmp/client_2_off.png')
+                                img.b-clients__image_hover(src='assets/img/tmp/client_2_on.png')
+                        a.b-clients__item(href='client.html')
+                            span.b-clients__title Практика комфорта
+                            .b-clients__content
+                                img.b-clients__image_default(src='assets/img/tmp/client_2_off.png')
+                                img.b-clients__image_hover(src='assets/img/tmp/client_2_on.png')
+                        a.b-clients__item(href='client.html')
+                            span.b-clients__title Евгений Лановой
                             .b-clients__content
                                 img.b-clients__image_default(src='assets/img/tmp/client_2_off.png')
                                 img.b-clients__image_hover(src='assets/img/tmp/client_2_on.png')
