--- a/src/templates/offer.jade
+++ b/src/templates/offer.jade
@@ -25,19 +25,25 @@ block content
                     p.b-offer-variants__header Бонусы в рублях при заказе баннера для тарифов
 
                     .b-offer-variants__list
-                        .b-offer-variants__item.b-offer-variants__item_1
+                        .b-offer-variants__item.b-offer-variants__item_color_red
                             p.b-offer-variants__title Стандарт
 
                             p.b-offer-variants__text 1 месяц бесплатного использования чата без ограничений
 
                             p.b-offer-variants__price 800#[small.b-offer-variants__rub ₽]
-                        .b-offer-variants__item.b-offer-variants__item_2
+                        .b-offer-variants__item.b-offer-variants__item_color_blue
                             p.b-offer-variants__title Премиум
 
                             p.b-offer-variants__text 2 месяца использования чата без ограничений
 
                             p.b-offer-variants__price 1600#[small.b-offer-variants__rub ₽]
-                        .b-offer-variants__item.b-offer-variants__item_3
+                        .b-offer-variants__item.b-offer-variants__item_color_purple
+                            p.b-offer-variants__title Вип
+
+                            p.b-offer-variants__text 4 месяца бесплатного использования чата без ограничений
+
+                            p.b-offer-variants__price 3200#[small.b-offer-variants__rub ₽]
+                        .b-offer-variants__item.b-offer-variants__item_color_purple
                             p.b-offer-variants__title Вип
 
                             p.b-offer-variants__text 4 месяца бесплатного использования чата без ограничений
