--- a/src/templates/prices.jade
+++ b/src/templates/prices.jade
@@ -19,11 +19,11 @@ block content
                         p.b-prices__title Эконом
 
                         .b-prices__text
-                            p Простая анимация
-                            p Нельзя вносить правки
-                            p От 5 дней на разработку
-                            p 1490 за ресайз
-                            p 490 за гиф-заглушку
+                            .b-prices__property: p.b-prices__property-text(data-toggle="popover", data-content="Анимация представляет из себя динамичную смену") Простая анимация
+                            .b-prices__property: p.b-prices__property-text Нельзя вносить правки
+                            .b-prices__property: p.b-prices__property-text От 5 дней на разработку
+                            .b-prices__property: p.b-prices__property-text(data-toggle="popover", data-content="Анимация представляет из себя динамичную смену") 1490 за ресайз
+                            .b-prices__property: p.b-prices__property-text 490 за гиф-заглушку
                         .b-prices__price 2990#[span.b-prices__rub ₽]
                         .text-center: a.b-prices__link(href='#prices_example_1') Посмотреть примеры
 
@@ -32,11 +32,11 @@ block content
                         p.b-prices__title Стандарт
 
                         .b-prices__text
-                            p Простая анимация
-                            p Можно вносить правки
-                            p От 2 дней на разработку
-                            p 1490 за ресайз
-                            p Гиф-заглушка в #[b подарок]
+                            .b-prices__property: p.b-prices__property-text Простая анимация
+                            .b-prices__property: p.b-prices__property-text Можно вносить правки
+                            .b-prices__property: p.b-prices__property-text От 2 дней на разработку
+                            .b-prices__property: p.b-prices__property-text 1490 за ресайз
+                            .b-prices__property: p.b-prices__property-text Гиф-заглушка в #[b подарок]
                         .b-prices__price 4990#[span.b-prices__rub ₽]
                         .text-center: a.b-prices__link(href='#prices_example_2') Посмотреть примеры
 
@@ -45,13 +45,13 @@ block content
                         p.b-prices__title Премиум
 
                         .b-prices__text
-                            p Сложная анимация с #[b “вау-эффектом”]
-                            p Можно вносить правки
-                            p Можно добавить #[b интерактив]
-                            p От 2 дней на разработку
-                            p 1990 за ресайз
-                            p Гиф-заглушка в #[b подарок]
-                            p #[a(href="#") #[b Бонусов] до 3500]
+                            .b-prices__property: p.b-prices__property-text(data-toggle="popover", data-content="Анимация представляет из себя динамичную смену") Сложная анимация с#[br]#[b “вау-эффектом”]
+                            .b-prices__property: p.b-prices__property-text Можно вносить правки
+                            .b-prices__property: p.b-prices__property-text Можно добавить #[b интерактив]
+                            .b-prices__property: p.b-prices__property-text От 2 дней на разработку
+                            .b-prices__property: p.b-prices__property-text 1990 за ресайз
+                            .b-prices__property: p.b-prices__property-text Гиф-заглушка в #[b подарок]
+                            .b-prices__property: a.b-prices__bonus(href="#") #[b Бонусов] до 3500#[span.b-prices__rub ₽]
                         .b-prices__price 9990#[span.b-prices__rub ₽]
                         .text-center: a.b-prices__link(href='#prices_example_3') Посмотреть примеры
 
