--- a/src/blocks/b-client/b-client.less
+++ b/src/blocks/b-client/b-client.less
@@ -5,14 +5,19 @@
 
 }
 
-.b-client__image {
+.b-client__head {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	margin-top: 6px;
-	margin-right: 10px;
+}
+
+.b-client__image {
+	margin: 0 25px;
 }
 
 .b-client__link {
-	margin-top: 6px;
-	margin-left: 10px;
+	margin: 0 25px;
 	display: inline-block;
 	font-size: 30px;
 	color: @text-color;
