--- a/src/blocks/b-prices/b-prices.less
+++ b/src/blocks/b-prices/b-prices.less
@@ -96,6 +96,57 @@
 	}
 }
 
+.b-prices__property {
+	margin: 0 -10px;
+
+	position: relative;
+}
+
+.b-prices__property-text {
+	display: inline-block;
+	border-radius: 4px;
+	padding: 5px 10px 8px;
+	margin-bottom: 0 !important;
+
+	&[data-toggle="popover"]:hover {
+		cursor: pointer;
+		margin-top: -4px !important;
+		padding: 9px 10px 8px;
+		background: #f5f9fc;
+	}
+}
+
+.popover {
+	border-radius: 5px;
+	border: none;
+	text-align: center;
+	box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.1);
+}
+
+.popover.top {
+	margin-top: -4px;
+}
+
+.popover-content {
+	padding-top: 12px;
+	padding-bottom: 13px;
+}
+
+.b-prices__bonus {
+	display: inline-block;
+	background: #e7cf00 9px 5px no-repeat url("../../assets/img/bonus.svg");
+	margin-top: 4px;
+	border-bottom: none !important;
+	line-height: 35px;
+	padding: 0 15px;
+	border-radius: 5px;
+
+	&:hover, &:active, &:focus {
+		color: @text-color !important;
+		background: #d7c000 9px 5px no-repeat url("../../assets/img/bonus.svg");
+	}
+}
+
 .b-prices__price {
 	font-size: 40px;
 	line-height: 54px;
@@ -108,6 +159,7 @@
 
 .b-prices__rub {
 	font-size: 65%;
+	margin-left: 2px;
 }
 
 .b-prices__link {
