--- a/src/less/bootstrap/variables.less
+++ b/src/less/bootstrap/variables.less
@@ -540,9 +540,9 @@
 //** Popover body background color
 @popover-bg:                          #fff;
 //** Popover maximum width
-@popover-max-width:                   276px;
+@popover-max-width:                   248px;
 //** Popover border color
-@popover-border-color:                rgba(0,0,0,.2);
+@popover-border-color:                rgba(0,0,0,0);
 //** Popover fallback border color
 @popover-fallback-border-color:       #ccc;
 
@@ -550,7 +550,7 @@
 @popover-title-bg:                    darken(@popover-bg, 3%);
 
 //** Popover arrow width
-@popover-arrow-width:                 10px;
+@popover-arrow-width:                 8px;
 //** Popover arrow color
 @popover-arrow-color:                 @popover-bg;
 
