--- a/src/less/common.less
+++ b/src/less/common.less
@@ -77,6 +77,60 @@ body {
 
 .margin-left-loop(@iterations);
 
+.margin-right-loop (@i) when (@i > 0) {
+	.g-mr@{i}0 {
+		margin-right: @i * 10px !important;
+	}
+
+	.margin-right-loop(@i - 1);
+}
+
+.margin-right-loop(@iterations);
+
+/**
+* Generate .g-pt10, .g-pt20, .g-pb10 classes
+*/
+
+.padding-top-loop (@i) when (@i > 0) {
+	.g-pt@{i}0 {
+		padding-top: @i * 10px !important;
+	}
+
+	.padding-top-loop(@i - 1);
+}
+
+.padding-top-loop(@iterations);
+
+.padding-bottom-loop (@i) when (@i > 0) {
+	.g-pb@{i}0 {
+		padding-bottom: @i * 10px !important;
+	}
+
+	.padding-bottom-loop(@i - 1);
+}
+
+.padding-bottom-loop(@iterations);
+
+.padding-left-loop (@i) when (@i > 0) {
+	.g-pl@{i}0 {
+		padding-left: @i * 10px !important;
+	}
+
+	.padding-left-loop(@i - 1);
+}
+
+.padding-left-loop(@iterations);
+
+.padding-right-loop (@i) when (@i > 0) {
+	.g-pr@{i}0 {
+		padding-right: @i * 10px !important;
+	}
+
+	.padding-right-loop(@i - 1);
+}
+
+.padding-right-loop(@iterations);
+
 .super-transition() {
 	-webkit-transition: all 300ms cubic-bezier(0.815, 0.225, 0.510, 0.985);
 	-moz-transition: all 300ms cubic-bezier(0.815, 0.225, 0.510, 0.985);
@@ -245,4 +299,16 @@ body {
 		border-bottom: solid 6px currentColor;
 		transform: rotate(-45deg);
 	}
+}
+
+.fancybox-type-image {
+	.fancybox-nav {
+		span {
+			top: 50%;
+		}
+	}
+}
+
+.alert-block {
+	text-align: left;
 }
