--- a/src/templates/client.jade
+++ b/src/templates/client.jade
@@ -6,11 +6,9 @@ block content
             h1.b-page__title Классика
 
             .b-client
-                .row
-                    .col-xs-6.text-right
-                        img.b-client__image(src='assets/img/tmp/client_1_on.png')
-                    .col-xs-6
-                        a.b-client__link(href='#') apteka-klassika.ru
+                .b-client__head
+                    img.b-client__image(src='assets/img/tmp/client_1_on.png')
+                    a.b-client__link(href='#') apteka-klassika.ru
 
                 .b-client__text
                     p На фармацевтическом рынке сеть аптек «Классика» существует с 1995 года. Это крупнейшая аптечная сеть на Урале, включающая более 180 аптек в 26 городах Челябинской и Свердловской областей. Аптеки находятся в Челябинске, Екатеринбурге, Тюмени и Магнитогорске. За эти 20 лет «Классика» прошла большой путь и приобрела имя, ставшее синонимом надежности и качества для людей по всему Уралу.
