--- a/src/templates/portfolio_item.jade
+++ b/src/templates/portfolio_item.jade
@@ -3,7 +3,7 @@ extends ./layouts/layout.jade
 block content
     .b-page
         .container
-            h1.b-page__title #[a.b-page__link(href="#") Флеш-баннер] для #[a.b-page__link(href="client.html") Exante] “Лучший брокер”
+            h1.b-page__title #[a.b-page__link(href="#") Флеш-баннер] для #[a.b-page__link(href="client.html") Exante]#[br]«Лучший брокер»
 
             .b-language-tabs
                 ul.b-language-tabs__list(role="tablist")
@@ -51,17 +51,14 @@ block content
                                 .b-portfolio-item__view
                                     img.b-portfolio-item__image.img-responsive(src='http://placehold.it/160x600', alt='')
                 .b-portfolio-item__lead
-                    .row
-                        .col-xs-8
-                            .b-portfolio-item__info Сфера бизнеса: #[a.b-portfolio-item__link(href='#') Финансы]
-                            .b-portfolio-item__info Стиль баннера: #[a.b-portfolio-item__link(href='#') Текстовый]
-                        .col-xs-4.text-right
-                            .b-portfolio-item__date 2 марта 2016
+                    .b-portfolio-item__info Сфера бизнеса: #[a.b-portfolio-item__link(href='#') Интернет-магазины]
+                    .b-portfolio-item__info Стиль баннера: #[a.b-portfolio-item__link(href='#') Фото-реалистичный]
 
-                            .b-portfolio-item__share.pull-right
-                                script(src="//yastatic.net/es5-shims/0.0.2/es5-shims.min.js")
-                                script(src="//yastatic.net/share2/share.js")
-                                .ya-share2(data-services="vkontakte,facebook,gplus")
+                    .b-portfolio-item__share.pull-right
+                        script(src="//yastatic.net/es5-shims/0.0.2/es5-shims.min.js")
+                        script(src="//yastatic.net/share2/share.js")
+                        .ya-share2(data-services="vkontakte,facebook,gplus")
+                    .b-portfolio-item__date 2 марта 2016
                 .b-portfolio-item__text.b-text
                     p Интерактивный флеш-баннер 240x400 для компании WikiPlanet, которая занимается организацией туров по всей России. Кстати, актуально при нынешнем курсе доллара.
                     p Особенности:
